# vrchatdemo

./: README.md
client/: package-lock.json  package.json
client/public/models/character/animations/: FastRun.glb  Walking.glb
client/src/: App.tsx  GameEngine.ts  InputManager.ts  SceneManager.ts
client/src/assets/models/low_poly_stadium/: scene.gltf
client/src/components/: ConnectionPopup.tsx  OtherPlayer.tsx
client/src/module_bindings/: collider_table.ts  collider_type.ts  index.ts  input_state_type.ts  logged_out_player_table.ts  player_table.ts  player_type.ts  tick_reducer.ts  tick_schedule_table.ts  tick_schedule_type.ts  update_player_input_reducer.ts  update_player_position_reducer.ts  upload_body_reducer.ts
client/src/types/: three-jsx.d.ts
gltf-uploader/: Cargo.toml
gltf-uploader/src/: lib.rs  scene.rs
gltf-uploader/src/module_bindings/: collider_table.rs  collider_type.rs  input_state_type.rs  logged_out_player_table.rs  mod.rs  player_table.rs  player_type.rs  tick_reducer.rs  tick_schedule_table.rs  tick_schedule_type.rs  update_player_input_reducer.rs  upload_body_reducer.rs
server/client/src/module_bindings/: index.ts  player_type.ts  update_player_animation_state_reducer.ts
server/src/: lib.rs  math.rs  physics.rs
server/src/physics/: mod.rs  utils.rs
server/src/player/: mod.rs  reducers.rs  utils.rs
server/src/world/: mod.rs
