[package]
name = "gltf-uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb-sdk = "1.0"
log = "0.4"
rapier3d = "0.25.0"
gltf = "1.4.1"
once_cell = "1.21"
nalgebra = "0.33"

[[bin]]
name = "gltf-uploader"
path = "src/lib.rs"
